Interpolation and distribution of Children Particles breaks #48634

Closed
opened 2016-06-11 07:02:18 +02:00 by Juan Pablo Bouza · 6 comments

Ubuntu 16.04

If you open the attached file in latest git you'll see that if you enter edit mode or particles edit mode and go back to object mode, then the distribution and interpolation of the children particles gets messed up.

I tired opening the file in 2.77a official and it works ok.

Also, I don't know if it is related or not, but if you add the default hair particles to the default cube, you will notice that one of the faces does not have particles on it. Again, this doesn't happen in 2.77a.

particles_bug2.blend

Ubuntu 16.04 If you open the attached file in latest git you'll see that if you enter edit mode or particles edit mode and go back to object mode, then the distribution and interpolation of the children particles gets messed up. I tired opening the file in 2.77a official and it works ok. Also, I don't know if it is related or not, but if you add the default hair particles to the default cube, you will notice that one of the faces does not have particles on it. Again, this doesn't happen in 2.77a. [particles_bug2.blend](https://archive.blender.org/developer/F316770/particles_bug2.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @jpbouza-4

Added subscriber: @jpbouza-4

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2016-06-11 14:24:51 +02:00

Regression from 019ce363b0 (and later refactor of this area too), caused by off-by-one error in reworked binary search util… Pretty much incredible this went unnoticed for two months (not to mention the fact I missed this during own tests)!

Regression from 019ce363b0 (and later refactor of this area too), caused by off-by-one error in reworked binary search util… Pretty much incredible this went unnoticed for two months (not to mention the fact I missed this during own tests)!

This issue was referenced by 4ec1c76afc

This issue was referenced by 4ec1c76afce1aa94a5a31e6b4bf446995f98ff5a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48634
No description provided.