Fix T48634: Interpolation and distribution of Children Particles breaks.

Own stupid off-by-one regression in rB019ce363b01bba0afe1 and later...